[project] 调整项目结构